--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <title>Shine smile</title>
     </head>
-    <body style="height: 1000px">
+    <body style="height: 2000px">
         <header class="header">
             <div class="content">
                 <div class="header-top">
@@ -130,6 +130,125 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section class="hero">
+                <section class="content">
+                    <section class="hero__left">
+                        <h1 class="h1 hero__title">
+                            Exceptional dental care for all ages.
+                        </h1>
+                        <p class="hero__desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="hero__cta btn">Book Online</a>
+                            <span class="hero__phone"
+                                >or call (123) 456-7890
+                            </span>
+                        </div>
+                    </section>
+                    <section class="hero__right">
+                        <img
+                            src="./assets/img/hero-img-1.jpg"
+                            alt="Exceptional dental care for all ages. Your great
+                        smile begins with a great dentist."
+                            class="hero__img"
+                        />
+                        <img
+                            src="./assets/img/hero-img-2.jpg"
+                            alt="Exceptional dental care for all ages. Your great
+                        smile begins with a great dentist."
+                            class="hero__img"
+                        />
+                    </section>
+                </section>
+            </section>
+            <section class="services">
+                <div class="content">
+                    <h2 class="services__title title">Our services</h2>
+                    <p class="services__desc decs">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+                    <section class="services__row">
+                        <section class="services__left">
+                            <img
+                                src="./assets/img/services-img.jpg"
+                                alt="Our services"
+                                class="services__img"
+                            />
+                        </section>
+                        <section class="services__right">
+                            <div class="services__list">
+                                <section class="services__item">
+                                    <div class="services__circle-icon">
+                                        <img
+                                            src="./assets/img/teeth_white.png"
+                                            alt="icon_services"
+                                        />
+                                    </div>
+                                    <section class="services__item-desc">
+                                        <h3 class="title services__item-title">
+                                            Oral Surgery
+                                        </h3>
+                                        <a
+                                            href="#!"
+                                            class="decs services__item-link"
+                                            >Everything you expect and then
+                                            some. Cleanings, fillings, and
+                                            x-rays.</a
+                                        >
+                                    </section>
+                                </section>
+                                <section class="services__item">
+                                    <div class="services__circle-icon">
+                                        <img
+                                            src="./assets/img/teeth_black.png"
+                                            alt="icon_services"
+                                        />
+                                    </div>
+                                    <section class="services__item-desc">
+                                        <h3 class="title services__item-title">
+                                            Wisdom Teeth Removal
+                                        </h3>
+                                        <a
+                                            href="#!"
+                                            class="decs services__item-link"
+                                            >Everything you expect and then
+                                            some. Cleanings, fillings, and
+                                            x-rays.</a
+                                        >
+                                    </section>
+                                </section>
+                                <section class="services__item">
+                                    <div class="services__circle-icon">
+                                        <img
+                                            src="./assets/img/teeth_black.png"
+                                            alt="icon_services"
+                                        />
+                                    </div>
+                                    <section class="services__item-desc">
+                                        <h3 class="title services__item-title">
+                                            Preventative Dentistry
+                                        </h3>
+                                        <a
+                                            href="#!"
+                                            class="decs services__item-link"
+                                            >Everything you expect and then
+                                            some. Cleanings, fillings, and
+                                            x-rays.</a
+                                        >
+                                    </section>
+                                </section>
+                            </div>
+                            <a href="#!" class="services__btn btn"
+                                >All Services</a
+                            >
+                        </section>
+                    </section>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
