--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <title>Shine smile</title>
     </head>
-    <body style="height: 2000px">
+    <body style="height: 5000px">
         <header class="header">
             <div class="content">
                 <div class="header-top">
@@ -248,6 +248,58 @@
                         </section>
                     </section>
                 </div>
+            </section>
+            <section class="works">
+                <div class="content">
+                    <h2 class="works__title title">How it works</h2>
+                    <p class="works__desc decs">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+                    <div class="works__row">
+                        <section class="works__item">
+                            <img
+                                src="./assets/img/Orion_search.svg"
+                                alt="Search doctor"
+                                class="works__icon"
+                            />
+                            <h3 class="works__item-title title">Search doctor</h3>
+                            <p class="works__item-desc decs">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="" class="works__item-link">Learn More</a>
+                        </section>
+                        <section class="works__item">
+                            <img
+                                src="./assets/img/Orion_find-user.svg
+                                "
+                                alt="Search doctor"
+                                class="works__icon"
+                            />
+                            <h3 class="works__item-title title">Find best doctor</h3>
+                            <p class="works__item-desc decs">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="" class="works__item-link">Learn More</a>
+                        </section>
+                        <section class="works__item">
+                            <img
+                                src="./assets/img/Orion_first-aid-kit.svg
+                                "
+                                alt="Search doctor"
+                                class="works__icon"
+                            />
+                            <h3 class="works__item-title title">Get treatment</h3>
+                            <p class="works__item-desc decs">
+                                Search a doctor by education, qualifications or
+                                experience-contact for inquiry.
+                            </p>
+                            <a href="" class="works__item-link">Learn More</a>
+                        </section>
+                    </div>
+                </div class="content">
             </section>
         </main>
     </body>
