--- a/index.html
+++ b/index.html
@@ -263,7 +263,9 @@
                                 alt="Search doctor"
                                 class="works__icon"
                             />
-                            <h3 class="works__item-title title">Search doctor</h3>
+                            <h3 class="works__item-title title">
+                                Search doctor
+                            </h3>
                             <p class="works__item-desc decs">
                                 Search a doctor by education, qualifications or
                                 experience-contact for inquiry.
@@ -277,7 +279,9 @@
                                 alt="Search doctor"
                                 class="works__icon"
                             />
-                            <h3 class="works__item-title title">Find best doctor</h3>
+                            <h3 class="works__item-title title">
+                                Find best doctor
+                            </h3>
                             <p class="works__item-desc decs">
                                 Search a doctor by education, qualifications or
                                 experience-contact for inquiry.
@@ -286,20 +290,52 @@
                         </section>
                         <section class="works__item">
                             <img
-                                src="./assets/img/Orion_first-aid-kit.svg
-                                "
+                                src="./assets/img/Orion_first-aid-kit.svg"
                                 alt="Search doctor"
                                 class="works__icon"
                             />
-                            <h3 class="works__item-title title">Get treatment</h3>
+                            <h3 class="works__item-title title">
+                                Get treatment
+                            </h3>
                             <p class="works__item-desc decs">
                                 Search a doctor by education, qualifications or
                                 experience-contact for inquiry.
                             </p>
-                            <a href="" class="works__item-link">Learn More</a>
+                            <a href="#!" class="works__item-link">Learn More</a>
                         </section>
                     </div>
-                </div class="content">
+                </div>
+            </section>
+            <section class="take-back">
+                <div class="content">
+                    <div class="take-back__row">
+                        <div class="take-back__left">
+                            <img
+                                src="./assets/img/take-back-img-1.jpg"
+                                alt="Take back your smile with shine."
+                                class="tack-back__img--big"
+                            />
+                            <img
+                                src="./assets/img/take-back-img-2.jpg"
+                                alt="Take back your smile with shine."
+                                class="tack-back__img--small"
+                            />
+                        </div>
+                        <div class="take-back__right">
+                            <div class="take-back__main-content">
+                                <h2 class="take-back__title title">
+                                    Take back your smile with shine.
+                                </h2>
+                                <p class="take-back__desc decs">
+                                    If you’re missing multiple teeth due to decay,
+                                    injury, or the natural aging process, dentures might
+                                    be the perfect solution.
+                                </p>
+                                <a href="#!" class="take-back__btn btn">Learn More</a>
+                            </div>
+                        </div>
+                    </div class="tack-back__row">
+                </div>
             </section>
         </main>
     </body>
