make virtual dentist

--- a/index.html
+++ b/index.html
@@ -327,14 +327,124 @@
                                     Take back your smile with shine.
                                 </h2>
                                 <p class="take-back__desc decs">
-                                    If you’re missing multiple teeth due to decay,
-                                    injury, or the natural aging process, dentures might
-                                    be the perfect solution.
+                                    If you’re missing multiple teeth due to
+                                    decay, injury, or the natural aging process,
+                                    dentures might be the perfect solution.
                                 </p>
-                                <a href="#!" class="take-back__btn btn">Learn More</a>
+                                <a href="#!" class="take-back__btn btn"
+                                    >Learn More</a
+                                >
                             </div>
                         </div>
-                    </div class="tack-back__row">
+                    </div>
+                </div>
+            </section>
+            <section class="virtual-dentist">
+                <div class="content">
+                    <h2 class="virtual-dentist__title title">
+                        Our virtual dentist
+                    </h2>
+                    <a href="#!" class="virtual-dentist__btn btn"
+                        >Meet our dentist
+                    </a>
+                    <div class="virtual-dentist__row">
+                        <div class="virtual-dentist__doc">
+                            <div class="virtual-dentist__bg">
+                                <img
+                                    src="./assets/img/doc-1.png"
+                                    alt="Dr. Essence Page"
+                                    class="virtual-dentist_img"
+                                />
+                            </div>
+                            <h3 class="virtual-dentist__name title">
+                                Dr. Essence Page
+                            </h3>
+                            <p class="virtual-dentist__sub-info decs">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <div class="virtual-dentist__doc">
+                            <div class="virtual-dentist__bg">
+                                <img
+                                    src="./assets/img/doc-2.png"
+                                    alt="Dr. Essence Page"
+                                    class="virtual-dentist_img"
+                                />
+                            </div>
+                            <h3 class="virtual-dentist__name title">
+                                Dr. Essence Page
+                            </h3>
+                            <p class="virtual-dentist__sub-info decs">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <div class="virtual-dentist__doc">
+                            <div class="virtual-dentist__bg">
+                                <img
+                                    src="./assets/img/doc-3.png"
+                                    alt="Dr. Essence Page"
+                                    class="virtual-dentist_img"
+                                />
+                            </div>
+                            <h3 class="virtual-dentist__name title">
+                                Dr. Essence Page
+                            </h3>
+                            <p class="virtual-dentist__sub-info decs">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                        <div class="virtual-dentist__doc">
+                            <div class="virtual-dentist__bg">
+                                <img
+                                    src="./assets/img/doc-4.png"
+                                    alt="Dr. Essence Page"
+                                    class="virtual-dentist_img"
+                                />
+                            </div>
+                            <h3 class="virtual-dentist__name title">
+                                Dr. Essence Page
+                            </h3>
+                            <p class="virtual-dentist__sub-info decs">
+                                DDS, California - Linda University
+                            </p>
+                        </div>
+                    </div>
+                    <div class="virtual-dentist__controls">
+                        <button class="virtual-dentist__control">
+                            <svg
+                                class="virtual-dentist__control-btn"
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <button class="virtual-dentist__control">
+                            <svg
+                                class="virtual-dentist__control-btn"
+                                width="6"
+                                height="12"
+                                viewBox="0 0 6 12"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M5.5 1L0.5 6L5.5 11"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </section>
         </main>
