--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <title>Shine smile</title>
     </head>
-    <body style="height: 5000px">
+    <body style="height: 7000px">
         <header class="header">
             <div class="content">
                 <div class="header-top">
@@ -409,8 +409,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="virtual-dentist__controls">
-                        <button class="virtual-dentist__control">
+                    <div class="button__controls virtual-dentist__controls">
+                        <button class="button__control">
                             <svg
                                 class="virtual-dentist__control-btn"
                                 width="6"
@@ -427,7 +427,7 @@
                                 />
                             </svg>
                         </button>
-                        <button class="virtual-dentist__control">
+                        <button class="button__control">
                             <svg
                                 class="virtual-dentist__control-btn"
                                 width="6"
@@ -444,6 +444,59 @@
                                 />
                             </svg>
                         </button>
+                    </div>
+                </div>
+            </section>
+            <section class="download">
+                <div class="content">
+                    <div class="download__row">
+                        <img
+                            src="./assets/img/phone.svg"
+                            alt="Take back your smile with dentures"
+                            class="download__img"
+                        />
+                        <div class="download__main-content">
+                            <h2 class="download__title title">
+                                Take back your smile with dentures
+                            </h2>
+                            <p class="download__desc decs">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <div class="download__btns">
+                                <button class="download__btn">
+                                    <img
+                                        class="download__logo"
+                                        src="./assets/img/googleplay.png"
+                                        alt="google play logo"
+                                    />
+                                    <div class="download__btn-text">
+                                        <span class="download__btn-text-small"
+                                            >GET IT ON</span
+                                        >
+                                        <span class="download__btn-text-big"
+                                            >Google Play</span
+                                        >
+                                    </div>
+                                </button>
+                                <button class="download__btn">
+                                    <img
+                                        class="download__logo"
+                                        src="./assets/img/Apple logo.png"
+                                        alt="apple logo"
+                                    />
+                                    <div class="download__btn-text">
+                                        <span class="download__btn-text-small"
+                                            >Download on the</span
+                                        >
+                                        <span class="download__btn-text-big"
+                                            >App Store</span
+                                        >
+                                    </div>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
