--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap"
             rel="stylesheet"
         />
 
         <title>Shine smile</title>
     </head>
-    <body style="height: 7000px">
+    <body>
         <header class="header">
             <div class="content">
                 <div class="header-top">
@@ -500,6 +500,218 @@
                     </div>
                 </div>
             </section>
+            <section class="news">
+                <div class="content">
+                    <div class="news__row">
+                        <section class="news__left">
+                            <h2 class="news__title title">
+                                Read Latest News & Events.
+                            </h2>
+                            <a href="#!" class="news__link">Read All Blog</a>
+                            <div class="button__controls news__control_btn">
+                                <button class="button__control">
+                                    <svg
+                                        class="virtual-dentist__control-btn"
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <button class="button__control">
+                                    <svg
+                                        class="virtual-dentist__control-btn"
+                                        width="6"
+                                        height="12"
+                                        viewBox="0 0 6 12"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5.5 1L0.5 6L5.5 11"
+                                            stroke="currentColor"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                        </section>
+                        <section class="news__right">
+                            <section class="news__blog-item">
+                                <img
+                                    src="./assets/img/blog-img-1.jpg"
+                                    alt="Key Considerations for Regulatory Compliant."
+                                />
+                                <div class="news__blog-item--content">
+                                    <h3 class="news__blog-title title">
+                                        Key Considerations for Regulatory
+                                        Compliant.
+                                    </h3>
+                                    <p class="news__blog-desc decs">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="#!" class="news__blog-link"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </section>
+                            <section class="news__blog-item">
+                                <img
+                                    src="./assets/img/blog-img2.jpg"
+                                    alt="Key Considerations for Regulatory Compliant."
+                                />
+                                <div class="news__blog-item--content">
+                                    <h3 class="news__blog-title title">
+                                        What Is Population Health Management?
+                                    </h3>
+                                    <p class="news__blog-desc decs">
+                                        It’s easy to think about medical care
+                                        from a narrow perspective. You go to the
+                                        hospital.
+                                    </p>
+                                    <a href="#!" class="news__blog-link"
+                                        >Learn More</a
+                                    >
+                                </div>
+                            </section>
+                        </section>
+                    </div>
+                </div>
+            </section>
+            <section class="appointment">
+                <div class="content">
+                    <h2 class="appointment__title title">
+                        Always welcoming new patients
+                    </h2>
+                    <p class="appointment__desc decs">
+                        Take control of your dental health and get the
+                        personalized care you deserve. Call (541) 772-8846 to
+                        schedule
+                    </p>
+                    <a href="#!" class="appointment__btn btn">Appointment</a>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="content">
+                <div class="footer__row">
+                    <div class="footer__column">
+                        <div class="logo">
+                            <img
+                                src="./assets/img/logo.svg"
+                                alt="Shine smile"
+                            />
+                            <div class="logo__text">
+                                <span class="logo__text--1">shine</span>
+                                <span class="logo__text--2">smile</span>
+                            </div>
+                        </div>
+                        <p class="footer__desc desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                    </div>
+                    <div class="footer__column">
+                        <ul class="footer__menu-list">
+                            <li class="footer__menu-item">
+                                <a href="#!">Support</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Help center</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Account information</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">About</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Contact us</a>
+                            </li>
+                        </ul>
+                        <ul class="footer__menu-list">
+                            <li class="footer__menu-item">
+                                <a href="#!">Support</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Help center</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Account information</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__column">
+                        <ul class="footer__menu-list">
+                            <li class="footer__menu-item">
+                                <a href="#!">Support</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Help center</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Account information</a>
+                            </li>
+                        </ul>
+                        <ul class="footer__menu-list">
+                            <li class="footer__menu-item">
+                                <a href="#!">Support</a>
+                            </li>
+                            <li class="footer__menu-item">
+                                <a href="#!">Help center</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__column">
+                        <h3 class="footer__column-title">Stay In Touch</h3>
+                        <div class="social-icons">
+                            <a href="#!" class="social-icon"
+                                ><img
+                                    src="./assets/img/facebook-logo.svg"
+                                    alt=""
+                            /></a>
+                            <a href="#!" class="social-icon"
+                                ><img src="./assets/img/twitter.svg" alt=""
+                            /></a>
+                            <a href="#!" class="social-icon"
+                                ><img src="./assets/img/in-logo.svg" alt=""
+                            /></a>
+                        </div>
+                        <h3 class="footer__column-title">Subscribe</h3>
+                        <p class="footer__column-desc">
+                            Subscribe our newsletter for the latest update of
+                            Dental care
+                        </p>
+                        <form action="" class="footer__form">
+                            <input
+                                class="footer__form-input"
+                                type="email"
+                                name=""
+                                id=""
+                                placeholder="Enter your email..."
+                            />
+                            <button class="btn footer__form-btn" type="submit">
+                                Subscribe
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="footer__separate"></div>
+                <div class="footer__copy">
+                    2021 GDN. Copyright and All rights reserved.
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
